--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAEfwvLkIqr2lykuFmKRnv8q-KVEKTl40Y"/>
         <activity
-            android:name=".MenuPrincipal"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:name=".SplashScreen"
+            android:label="@string/title_activity_splash_screen"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,6 +30,14 @@
         <activity
             android:name=".Agenda"
             android:label="@string/title_activity_agenda" >
+        </activity>
+        <activity
+            android:name=".MenuPrincipal"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".PrimerInicio"
+            android:label="@string/title_activity_primer_inicio" >
         </activity>
     </application>
 
