Añadido icono para las push

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         </activity>
 
         <!--PARSE NOTIFICATIONS -->
+        <meta-data android:name="com.parse.push.notification_icon" android:resource="@drawable/ic_logotipo"/>
         <service android:name="com.parse.PushService" />
         <receiver android:name="com.parse.ParseBroadcastReceiver">
             <intent-filter>
