--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.4'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.android.support:support-v4:22.2.0'
-    compile 'com.roomorama:caldroid:2.2.0'
+    compile 'com.github.sundeepk:compact-calendar-view:1.7.3'
+
 }
