--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(include: 'Parse-*.jar', dir: 'libs')
+    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
     compile files('libs/robotium-solo-5.3.1.jar')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.maps.android:android-maps-utils:0.4'
@@ -36,5 +36,5 @@ dependencies {
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     compile 'com.github.sundeepk:compact-calendar-view:1.7.3'
     compile 'com.squareup:android-times-square:1.6.4@aar'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
