--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile fileTree(include: 'Parse-*.jar', dir: 'libs')
     compile files('libs/robotium-solo-5.3.1.jar')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.maps.android:android-maps-utils:0.4'
