--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.github.sundeepk:compact-calendar-view:1.7.3'
     compile 'com.squareup:android-times-square:1.6.4@aar'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.jorgecastilloprz:fillableloaders:1.01@aar'
 }
