--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 
 buildscript {
     repositories {
-        jcenter()
+        maven { url "http://dl.bintray.com/populov/maven" }
         maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
@@ -18,5 +20,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
+        jcenter()
     }
 }
