--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Tue Nov 03 08:12:05 CET 2015
-systemProp.https.proxyPort=3128
-systemProp.http.proxyHost=172.16.19.117
-systemProp.https.proxyHost=172.16.19.117
-systemProp.http.proxyPort=3128
+#systemProp.https.proxyPort=3128
+#systemProp.http.proxyHost=172.16.19.117
+#systemProp.https.proxyHost=172.16.19.117
+#systemProp.http.proxyPort=3128
